Title and artist fix in tooltip. Also updated README.

--- a/static/index.html
+++ b/static/index.html
@@ -59,7 +59,7 @@
 													_dp = e.entries[0].dataPoint;
 
 													// Define the return string that we'll concat to.
-													_return = "";
+													_return = "Title: " + _dp["title"] + "<br />Artist: " + _dp["artist"] + "<br />";
 
 													_selected_options = selected_options( );
 													// Iterate over the tooltip_options..
