Adding screenshot and modifying readme. Also quick text font family.

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,9 @@
 		<script src="lib/async.js"></script>
 		<link rel="stylesheet" type="text/css" href="lib/jquery-ui.min.css" />
 		<style type="text/css">
+		body {
+			font-family: Arial;
+		}
 		#main_graph { 
 			width: 84%;
 			height: 85%;
